--- a/ppms_project/profilingApp/templates/activities/Admin - Preschooler.html
+++ b/ppms_project/profilingApp/templates/activities/Admin - Preschooler.html
@@ -146,7 +146,7 @@
                     <div class="card-body text-center">
                         <div class="row">
                             <div class="col-md-8 d-block justify-content-center">
-                                <p style="font-size: xx-large;" class="card-text">{{ severly }}</p>
+                                <p style="font-size: xx-large;" class="card-text">{{ preschooler_60_above_count }}</p>
                                 <p class="text-uppercase fw-bold">Archived Preschoolers (60 months and above old) </p>
                             </div>
                             <div class="col-md-4 d-flex align-items-center justify-content-center">
@@ -156,15 +156,15 @@
                         <hr>
                         <div class="row">
                             <div class="col-md-4 d-block">
-                                <p style="font-size: xx-large;" class="card-text">{{ severly }}</p>
+                                <p style="font-size: xx-large;" class="card-text">{{ all_preschooler_count }}</p>
                                 <p class="text-uppercase fw-bold">Registered preschoolers</p>
                             </div>
                             <div class="col-md-4 d-block">
-                                <p style="font-size: xx-large;" class="card-text">{{ severly }}</p>
+                                <p style="font-size: xx-large;" class="card-text">{{ preschooler_with_record_count }}</p>
                                 <p class="text-uppercase fw-bold">Preschoolers with records </p>
                             </div>
                             <div class="col-md-4 d-block">
-                                <p style="font-size: xx-large;" class="card-text">{{ severly }}</p>
+                                <p style="font-size: xx-large;" class="card-text">{{ preschooler_without_record_count }}</p>
                                 <p class="text-uppercase fw-bold">Preschoolers with no records </p>
                             </div> 
                         </div>
@@ -198,7 +198,7 @@
                                     </tr>   
                                 </thead>
                                 <tbody>
-                                    {% for preschooler in archive_preschoolers %}
+                                    {% for preschooler in preschooler_60_above %}
                                     <tr style="text-align: center;">
                                         <td></td>
                                         <td>{{ preschooler.last_name }}</td>
@@ -297,28 +297,41 @@
                     <div class="table-responsive" >
                         <table class="table table-hover table-cell-border" id="BHWuser_table" >
                             <thead>
-                                <tr>
-                                    <th scope="col" class="text-center">No.</th>
-                                    <th scope="col" class="text-center">Last Name</th>
-                                    <th scope="col" class="text-center">First Name</th>
-                                    <th scope="col" class="text-center">Middle Name</th>
-                                    <th scope="col" class="text-center">Suffix</th>
-                                    <th scope="col" class="text-center">Phone Number</th>
-                                    <th scope="col" class="text-center">Email</th>
-                                    <th scope="col" class="text-center">Barangay Designation</th>
-                                </tr>
+                                <tr style="text-align: center;">
+                                    <th scope="col">No.</th>
+                                    <th scope="col">Last Name</th>
+                                    <th scope="col">First Name</th>
+                                    <th scope="col">Middle Name</th>
+                                    <th scope="col">Suffix</th>
+                                    <th scope="col">Birthdate</th>
+                                    <th scope="col">Age Last Measured (Month)</th>
+                                    <th scope="col">BMI STATUS</th>
+                                </tr>   
                             </thead>
                             <tbody>
-                                {% for bhw in bhws %}
-                                <tr>
-                                    <td class="text-center"></td>
-                                    <td class="text-center">{{ bhw.user.last_name }}</td>
-                                    <td class="text-center">{{ bhw.user.first_name }}</td>
-                                    <td class="text-center">{{ bhw.user.middle_name }}</td>
-                                    <td class="text-center">{{ bhw.user.suffix_name }}</td>
-                                    <td class="text-center">{{ bhw.user.phone_num}}</td>
-                                    <td class="text-center">{{ bhw.user.email }}</td>
-                                    <td class="text-center">{{ bhw.bhw_barangay }}</td>
+                                {% for preschooler in preschooler_with_record %}
+                                <tr style="text-align: center;">
+                                    <td></td>
+                                    <td>{{ preschooler.last_name }}</td>
+                                    <td>{{ preschooler.first_name }}</td>
+                                    <td>{{ preschooler.middle_name }}</td>
+                                    <td>{{ preschooler.suffix_name }}</td>
+                                    <td>{{ preschooler.birthday }}</td>
+                                    <td>{{ preschooler.age_measured }} Months</td>
+                                    {% if preschooler.whfa is None %}
+                                    
+                                        <td> No Data Record </td>
+                                    {% elif preschooler.whfa > 3.0%}
+                                        <td style="background-color: rgb(242, 98, 33);"> Obese ({{ preschooler.whfa }})</td>
+                                    {% elif preschooler.whfa > 2.0 and preschooler.whfa <= 3.0 %}
+                                        <td style="background-color: rgb(242, 98, 33);"> Overweight ({{ preschooler.whfa }})</td>
+                                    {% elif preschooler.whfa >= -2.0 and preschooler.whfa <= 2.0 %}
+                                        <td style="background-color: rgb(0, 165, 79);"> Normal ({{ preschooler.whfa}})</td>
+                                    {% elif preschooler.whfa >= -3.0 and preschooler.whfa < -2.0 %}
+                                        <td style="background-color: rgb(255, 241, 2);"> Moderately Wasted ({{ preschooler.whfa }})</td>
+                                    {% else %}
+                                        <td style="background-color: rgb(238, 29, 35);"> Severely Wasted ({{preschooler.whfa }})</td>
+                                    {% endif %}                                   
                                 </tr>
                                 {% endfor %}
                             </tbody>
